# CAT-Simulation-Engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTENANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md
.github/workflows/: README.md  codeql.yml  python_ci.yml  rust_ci.yml
analytics_python/: README.md  dashboard.py  logic_plotter.py  requirements.txt
data/: README.md
data/runs/: README.md
docs/: API_Reference.md  CAT_Architecture.md  README.md
docs/api/: API_Reference.md  README.md
docs/architecture/: CAT_Architecture.md  README.md
docs/guides/: INSTALL.md  README.md
docs/theory/: PHILOSOPHY.md  README.md
engine_rust/: Cargo.toml  README.md
engine_rust/src/: README.md  agent.rs  exporter.rs  grid.rs  lib.rs  main.rs  simulation.rs
engine_rust/tests/: README.md  physics_tests.rs
