[package]
name = "cat-simulation-engine"
version = "1.0.0"
edition = "2021"
authors = ["CAT Research Collective"]
description = "Agent-Based Model simulating the Fermi Paradox via Cosmobiological Asynchrony Theory"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/LiranOG/CAT-Simulation-Engine"
readme = "../README.md"
keywords = ["fermi-paradox", "agent-based-model", "cosmobiology", "simulation"]
categories = ["science", "simulation"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[lib]
name = "cat_simulation_engine"
path = "src/lib.rs"

[[bin]]
name = "cat-engine"
path = "src/main.rs"
